Add basic html frame

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
         <script src="./app.js"></script>
     </head>
     <body>
-        <h1>Odin Library App</h1>
+        <header class="header">
+            <h1>Library</h1>
+        </header>
+        <aside class="sidebar">
+            <div>
+                <p>Total books</p>
+                <p id="total-bboks">##</p>
+            </div>
+            <div>
+                <p>Books read</p>
+                <p id="books-read">##</p>
+            </div>
+            <div>
+                <p>To be read</p>
+                <p id="to-be-read"></p>
+            </div>
+            <button id="add-book">Add book</button>
+        </aside>
+        <main class="library">
+
+        </main>
     </body>
 </html>
