Add sidebar content

--- a/index.html
+++ b/index.html
@@ -9,24 +9,58 @@
     </head>
     <body>
         <header class="header">
-            <h1>Library</h1>
+            
         </header>
         <aside class="sidebar">
-            <div>
-                <p>Total books</p>
-                <p id="total-bboks">##</p>
+            <div class="title">
+                <div class="main-title">
+                    <img src="./icons/placeholder-book.svg" alt="book logo" class="logo">
+                    <h1>BookLog</h1>
+                </div>
+                <p class="sub-title">Personal Library</p>
             </div>
-            <div>
-                <p>Books read</p>
-                <p id="books-read">##</p>
-            </div>
-            <div>
-                <p>To be read</p>
-                <p id="to-be-read"></p>
-            </div>
-            <button id="add-book">Add book</button>
+            <nav class="navbar">
+                <ul class="status-group">
+                    <li id="status-all">
+                        <img src="./icons/placeholder-book.svg" alt="all books icon">
+                        <p>All</p>
+                    </li>
+                    <li id="status-read">
+                        <img src="./icons/placeholder-book.svg" alt="read books icon">
+                        <p>Read</p>
+                    </li>
+                    <li id="status-currently">
+                        <img src="./icons/placeholder-book.svg" alt="currently reading icon">
+                        <p>Currently reading</p>
+                    </li>
+                    <li id="status-tbr">
+                        <img src="./icons/placeholder-book.svg" alt="to be read icon">
+                        <p>To be read</p>
+                    </li>
+                </ul>
+                <ul class="user-lists">
+                    <li id="list-1">
+                        <img src="./icons/placeholder-book.svg" alt="list icon">
+                        <p>Favorites</p>
+                    </li>
+                    <li id="list-2">
+                        <img src="./icons/placeholder-book.svg" alt="list icon">
+                        <p>Classics</p>
+                    </li>
+                </ul>
+                <ul class="preferences">
+                    <li id="profile">
+                        <img src="./icons/placeholder-book.svg" alt="profile icon">
+                        <p>Profile</p>
+                    </li>
+                    <li id="settings">
+                        <img src="./icons/placeholder-book.svg" alt="settings icon">
+                        <p>Settings</p>
+                    </li>
+                </ul>
+            </nav>
         </aside>
-        <main class="library">
+        <main class="main">
 
         </main>
     </body>
