Add header content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     </head>
     <body>
         <header class="header">
-            
+            <div class="search-bar">
+                <input type="search">
+                <img src="./icons/placeholder-book.svg" alt="magnifying glass icon">
+            </div>
+            <div class="profile-indicator">
+                <img src="./images/placeholder-user.png" alt="user picture" class="user-picture">
+                <h2>Username</h2>
+            </div>
+            <div class="current-view">
+                <h2 id="current-view">To be read</h2>
+            </div>
+            <div class="buttons">
+                <button type="button" id="new-book-btn">New book</button>
+                <button type="button" id="new-list-btn">New list</button>
+            </div>
         </header>
         <aside class="sidebar">
             <div class="title">
@@ -41,11 +55,11 @@
                 <ul class="user-lists">
                     <li id="list-1">
                         <img src="./icons/placeholder-book.svg" alt="list icon">
-                        <p>Favorites</p>
+                        <p>First list</p>
                     </li>
                     <li id="list-2">
                         <img src="./icons/placeholder-book.svg" alt="list icon">
-                        <p>Classics</p>
+                        <p>Second list</p>
                     </li>
                 </ul>
                 <ul class="preferences">
