Add header styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header">
             <div class="search-bar">
                 <input type="search">
-                <img src="./icons/placeholder-book.svg" alt="magnifying glass icon">
+                <img src="./icons/magnify.svg" alt="magnifying glass icon">
             </div>
             <div class="profile-indicator">
                 <img src="./images/placeholder-user.png" alt="user picture" class="user-picture">
