Add sidebar styling

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </header>
         <aside class="sidebar">
             <div class="title">
-                <div class="main-title">
-                    <img src="./icons/placeholder-book.svg" alt="book logo" class="logo">
+                <img src="./icons/placeholder-book.svg" alt="book logo" class="logo">
+                <div class="text-title">
                     <h1>BookLog</h1>
+                    <p>Personal Library</p>
                 </div>
-                <p class="sub-title">Personal Library</p>
             </div>
             <nav class="navbar">
                 <ul class="status-group">
@@ -60,6 +60,10 @@
                     <li id="list-2">
                         <img src="./icons/placeholder-book.svg" alt="list icon">
                         <p>Second list</p>
+                    </li>
+                    <li id="list-3">
+                        <img src="./icons/placeholder-book.svg" alt="list icon">
+                        <p>Third list</p>
                     </li>
                 </ul>
                 <ul class="preferences">
