Add main area and card styling

--- a/index.html
+++ b/index.html
@@ -78,7 +78,32 @@
                 </ul>
             </nav>
         </aside>
-        <main class="main">
+        <main class="book-area">
+            <div class="div book-card">
+                <h3>Placeholder Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
+                <p>####</p>
+            </div>
+            <div class="div book-card">
+                <h3>Placeholder Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
+                <p>####</p>
+            </div>
+            <div class="div book-card">
+                <h3>Placeholder Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
+                <p>####</p>
+            </div>
+            <div class="div book-card">
+                <h3>Placeholder Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
+                <p>####</p>
+            </div>
+            <div class="div book-card">
+                <h3>Placeholder Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
+                <p>####</p>
+            </div>
 
         </main>
     </body>
