Update header styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2>Username</h2>
             </div>
             <div class="current-view">
-                <h2 id="current-view">To be read</h2>
+                <h2 id="current-view">Unreasonably long test title</h2>
             </div>
             <div class="buttons">
                 <button type="button" id="new-book-btn">New book</button>
@@ -104,7 +104,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
                 <p>####</p>
             </div>
-
         </main>
     </body>
 </html>
