Remove placeholder cards

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Library</title>
         <link rel="stylesheet" href="./style.css">
-        <script src="./app.js"></script>
+        <script src="./app.js" defer></script>
     </head>
     <body>
         <header class="header">
@@ -79,31 +79,6 @@
             </nav>
         </aside>
         <main class="book-area">
-            <div class="div book-card">
-                <h3>Placeholder Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
-                <p>####</p>
-            </div>
-            <div class="div book-card">
-                <h3>Placeholder Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
-                <p>####</p>
-            </div>
-            <div class="div book-card">
-                <h3>Placeholder Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
-                <p>####</p>
-            </div>
-            <div class="div book-card">
-                <h3>Placeholder Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
-                <p>####</p>
-            </div>
-            <div class="div book-card">
-                <h3>Placeholder Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, alias?</p>
-                <p>####</p>
-            </div>
         </main>
     </body>
 </html>
