Update card design

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             </nav>
         </aside>
         <main class="book-area">
+            <div class="div book-card">
+                <h3>Test Book Title</h3>
+                <p>Fictional Author</p>
+                <p>1152</p>
+                <p>Not read yet</p>
+            </div>
         </main>
     </body>
 </html>
